feat(identity): persist school memberships