@@ -1,28 +1,17 @@
 package com.campusguinness.identity.internal.domain;
 
+import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
 /**
- * User aggregate root — final aggregate (13/13).
+ * User aggregate root.
  *
- * <p>Account state machine (4 states):
- * <pre>
- *   PENDING_ACTIVATION → NORMAL ⇄ LOCKED
- *          ↓               ↓        ↓
- *        DISABLED ←────────┴────────┘
- *          ↓
- *        NORMAL
- * </pre>
- *
- * <p>SchoolMembership: USER_AGGREGATE_CHILD_ENTITY — simple ACTIVE/ENDED record
- * referencing School by ID. No independent state machine. Not deferred.
- *
- * <p>Excluded from domain (authentication infrastructure):
- * password_hash, login_failures, locked_until.
+ * <p>SchoolMembership is a child entity inside this aggregate. It references
+ * School by ID only and is written through UserRepository.
  */
 public final class User {
 
@@ -34,9 +23,12 @@ public final class User {
     private final List<Object> domainEvents;
 
     private User(Builder b, AccountStatus status) {
-        this.id = b.id; this.username = b.username; this.status = status;
+        this.id = b.id;
+        this.username = b.username;
+        this.status = status;
         this.platformRole = b.platformRole;
-        this.memberships = new ArrayList<>(); this.domainEvents = new ArrayList<>();
+        this.memberships = new ArrayList<>();
+        this.domainEvents = new ArrayList<>();
     }
 
     public static User create(Builder builder) {
@@ -44,11 +36,17 @@ public final class User {
         return new User(builder, AccountStatus.PENDING_ACTIVATION);
     }
 
-    public static User reconstitute(Builder builder, AccountStatus status,
-            List<SchoolMembership> memberships) {
+    public static User reconstitute(
+            Builder builder,
+            AccountStatus status,
+            List<SchoolMembership> memberships
+    ) {
         validate(builder);
+        if (status == null) {
+            throw new IllegalArgumentException("status required");
+        }
         var u = new User(builder, status);
-        u.memberships.addAll(memberships);
+        u.restoreMemberships(memberships);
         return u;
     }
 
@@ -58,9 +56,7 @@ public final class User {
         if (b.username.length() > 100) throw new IllegalArgumentException("username max 100 chars");
     }
 
-    // ── Account state transitions ──
-
-    /** PENDING_ACTIVATION → NORMAL */
+    /** PENDING_ACTIVATION -> NORMAL */
     public void activate() {
         if (status != AccountStatus.PENDING_ACTIVATION) {
             throw new InvalidAccountStateTransitionException(status, "activate");
@@ -69,7 +65,7 @@ public final class User {
         domainEvents.add(new UserActivated(id));
     }
 
-    /** NORMAL → LOCKED */
+    /** NORMAL -> LOCKED */
     public void lock() {
         if (status != AccountStatus.NORMAL) {
             throw new InvalidAccountStateTransitionException(status, "lock");
@@ -77,7 +73,7 @@ public final class User {
         this.status = AccountStatus.LOCKED;
     }
 
-    /** LOCKED → NORMAL */
+    /** LOCKED -> NORMAL */
     public void unlock() {
         if (status != AccountStatus.LOCKED) {
             throw new InvalidAccountStateTransitionException(status, "unlock");
@@ -85,7 +81,7 @@ public final class User {
         this.status = AccountStatus.NORMAL;
     }
 
-    /** PENDING_ACTIVATION / NORMAL / LOCKED → DISABLED */
+    /** PENDING_ACTIVATION / NORMAL / LOCKED -> DISABLED */
     public void disable() {
         if (status != AccountStatus.PENDING_ACTIVATION
                 && status != AccountStatus.NORMAL
@@ -96,7 +92,7 @@ public final class User {
         domainEvents.add(new UserDisabled(id));
     }
 
-    /** DISABLED → NORMAL */
+    /** DISABLED -> NORMAL */
     public void reEnable() {
         if (status != AccountStatus.DISABLED) {
             throw new InvalidAccountStateTransitionException(status, "re-enable");
@@ -105,51 +101,111 @@ public final class User {
         domainEvents.add(new UserActivated(id));
     }
 
-    // ── School memberships ──
-
-    /** Add a school membership. Rejects duplicate schoolId. */
-    public void addMembership(SchoolMembership membership) {
-        if (memberships.stream().anyMatch(m -> m.schoolId().equals(membership.schoolId())
-                && m.status() == MembershipStatus.ACTIVE)) {
-            throw new IllegalStateException("active membership already exists for school " + membership.schoolId());
-        }
-        this.memberships.add(membership);
+    public SchoolMembership grantStudentMembership(
+            SchoolMembershipId membershipId,
+            UUID schoolId,
+            Instant startedAt
+    ) {
+        return grantMembership(membershipId, schoolId, SchoolRole.STUDENT, startedAt);
     }
 
-    /** End a school membership by schoolId. */
-    public void endMembership(UUID schoolId) {
-        for (int i = 0; i < memberships.size(); i++) {
-            var m = memberships.get(i);
-            if (m.schoolId().equals(schoolId) && m.status() == MembershipStatus.ACTIVE) {
-                memberships.set(i, m.end());
-                return;
-            }
-        }
-        throw new IllegalStateException("no active membership for school " + schoolId);
+    public SchoolMembership grantSchoolAdminMembership(
+            SchoolMembershipId membershipId,
+            UUID schoolId,
+            Instant startedAt
+    ) {
+        return grantMembership(membershipId, schoolId, SchoolRole.SCHOOL_ADMIN, startedAt);
     }
 
-    /** Find primary/active memberships. */
+    public SchoolMembership endMembership(UUID schoolId, Instant endedAt) {
+        var membership = activeMembershipFor(schoolId)
+                .orElseThrow(() -> new IllegalStateException("no active membership for school " + schoolId));
+        membership.end(endedAt);
+        return membership;
+    }
+
     public List<SchoolMembership> activeMemberships() {
         return memberships.stream()
                 .filter(m -> m.status() == MembershipStatus.ACTIVE)
                 .toList();
     }
 
-    public Optional<SchoolMembership> membershipFor(UUID schoolId) {
-        return memberships.stream().filter(m -> m.schoolId().equals(schoolId)).findFirst();
+    public Optional<SchoolMembership> activeMembershipFor(UUID schoolId) {
+        if (schoolId == null) throw new IllegalArgumentException("schoolId required");
+        return memberships.stream()
+                .filter(m -> m.schoolId().equals(schoolId))
+                .filter(m -> m.status() == MembershipStatus.ACTIVE)
+                .findFirst();
+    }
+
+    public List<SchoolMembership> membershipHistoryFor(UUID schoolId) {
+        if (schoolId == null) throw new IllegalArgumentException("schoolId required");
+        return memberships.stream()
+                .filter(m -> m.schoolId().equals(schoolId))
+                .toList();
+    }
+
+    private SchoolMembership grantMembership(
+            SchoolMembershipId membershipId,
+            UUID schoolId,
+            SchoolRole role,
+            Instant startedAt
+    ) {
+        if (status != AccountStatus.NORMAL) {
+            throw new IllegalStateException("only NORMAL users can receive school memberships");
+        }
+        if (membershipId == null) throw new IllegalArgumentException("schoolMembershipId required");
+        if (schoolId == null) throw new IllegalArgumentException("schoolId required");
+        if (startedAt == null) throw new IllegalArgumentException("startedAt required");
+        rejectDuplicateMembershipId(membershipId);
+        rejectDuplicateActiveSchool(schoolId);
+
+        var membership = SchoolMembership.start(membershipId, schoolId, role, startedAt);
+        this.memberships.add(membership);
+        return membership;
+    }
+
+    private void rejectDuplicateActiveSchool(UUID schoolId) {
+        if (activeMembershipFor(schoolId).isPresent()) {
+            throw new IllegalStateException("active membership already exists for school " + schoolId);
+        }
+    }
+
+    private void rejectDuplicateMembershipId(SchoolMembershipId membershipId) {
+        if (memberships.stream().anyMatch(m -> m.id().equals(membershipId))) {
+            throw new IllegalStateException("membership id already exists: " + membershipId.value());
+        }
+    }
+
+    private void restoreMemberships(List<SchoolMembership> restored) {
+        if (restored == null) {
+            throw new IllegalArgumentException("memberships required");
+        }
+        var ids = new HashSet<SchoolMembershipId>();
+        var activeSchools = new HashSet<UUID>();
+        for (var membership : restored) {
+            if (membership == null) {
+                throw new IllegalArgumentException("membership required");
+            }
+            if (!ids.add(membership.id())) {
+                throw new IllegalStateException("duplicate membership id: " + membership.id().value());
+            }
+            if (membership.status() == MembershipStatus.ACTIVE && !activeSchools.add(membership.schoolId())) {
+                throw new IllegalStateException("duplicate active membership for school " + membership.schoolId());
+            }
+        }
+        this.memberships.addAll(restored);
     }
 
     public void clearDomainEvents() { domainEvents.clear(); }
-
-    // ── Getters ──
 
     public UserId id() { return id; }
     public String username() { return username; }
     public AccountStatus status() { return status; }
     public String platformRole() { return platformRole; }
 
-    public List<SchoolMembership> memberships() { return Collections.unmodifiableList(memberships); }
-    public List<Object> domainEvents() { return Collections.unmodifiableList(domainEvents); }
+    public List<SchoolMembership> memberships() { return List.copyOf(memberships); }
+    public List<Object> domainEvents() { return List.copyOf(domainEvents); }
 
     public static class Builder {
         private UserId id;
